fix: wrap tooltips

--- a/src/components/IconLibrary/IconLibrary.module.scss
+++ b/src/components/IconLibrary/IconLibrary.module.scss
@@ -172,23 +172,13 @@ $icon-card-border: 1px solid $ui-03;
   height: 100%;
 }
 
-.icon-card .tooltip-definition {
+.icon-card .trigger-text {
+  @include carbon--type-style('label-01');
   top: $spacing-04;
   left: $spacing-05;
   position: absolute;
-  width: 100%;
-}
-
-.icon-card .tooltip-definition button {
-  white-space: nowrap;
   max-width: calc(100% - #{$spacing-07});
-}
-
-.icon-card .tooltip-definition .trigger-text {
-  @include carbon--type-style('label-01');
-  overflow-x: hidden;
-  text-overflow: ellipsis;
-  text-align: left;
+  width: 100%;
 }
 
 .no-result .search-label {
